// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a function 1`] = `
Object {
  "app.wsim": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_function",
        "props": Object {
          "environmentVariables": Object {
            "ENV_VAR1": "true",
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Handler": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "relationship": "print (implicit)",
                "resource": "root/my_function",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_function": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "relationship": "print (implicit)",
                "resource": "root/WingLogger",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.130",
              },
              "id": "Code",
              "path": "root/my_function/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "id": "my_function",
          "path": "root/my_function",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`invoke function fails 1`] = `
Array [
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "Invoke (payload=\\"{\\"name\\":\\"alice\\"}\\").",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`invoke function fails 2`] = `
Object {
  "app.wsim": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_function",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Handler": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "relationship": "print (implicit)",
                "resource": "root/my_function",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_function": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "relationship": "print (implicit)",
                "resource": "root/WingLogger",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.130",
              },
              "id": "Code",
              "path": "root/my_function/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "id": "my_function",
          "path": "root/my_function",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`invoke function succeeds 1`] = `
Array [
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "Invoke (payload=\\"{\\"name\\":\\"Alice\\"}\\").",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`invoke function succeeds 2`] = `
Object {
  "app.wsim": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_function",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
          },
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Handler": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "relationship": "print (implicit)",
                "resource": "root/my_function",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_function": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "relationship": "print (implicit)",
                "resource": "root/WingLogger",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.130",
              },
              "id": "Code",
              "path": "root/my_function/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "id": "my_function",
          "path": "root/my_function",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`invoke function with environment variables 1`] = `
Array [
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "Invoke (payload=\\"{\\"name\\":\\"Alice\\"}\\").",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`invoke function with environment variables 2`] = `
Object {
  "app.wsim": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_function",
        "props": Object {
          "environmentVariables": Object {
            "LOGGER_HANDLE_76f7e65b": "\${root/WingLogger#attrs.handle}",
            "PIG_LATIN": "true",
          },
          "sourceCodeFile": "assets/my_function/index.js",
          "sourceCodeLanguage": "javascript",
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "Handler": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": false,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "inbound",
                "relationship": "print (implicit)",
                "resource": "root/my_function",
              },
            ],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_function": Object {
          "attributes": Object {
            "wing:resource:connections": Array [
              Object {
                "direction": "outbound",
                "relationship": "print (implicit)",
                "resource": "root/WingLogger",
              },
            ],
            "wing:resource:stateful": false,
          },
          "children": Object {
            "Code": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.130",
              },
              "id": "Code",
              "path": "root/my_function/Code",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.130",
          },
          "id": "my_function",
          "path": "root/my_function",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.130",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
